# filesync

./: .autotools  .cproject  .gitignore  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  build.gradle  config.status  configure  configure.ac  libtool  poco
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
conf/: ftp.cfg
exampleProgram/: Makefile  Makefile.am  Makefile.in  exampleProgram  exampleProgram.cpp
exampleProgram/.deps/: exampleProgram-exampleProgram.Po
exampleProgram/.libs/: exampleProgram
filesync/: Makefile  Makefile.am  main.cpp
include/: Makefile  Makefile.am  Makefile.in  filesync.h  libFileSync.h
libFileSync/: Makefile  Makefile.am  Makefile.in  libFileSync.cpp  libFileSync.la  libFileSync_la-libFileSync.lo
libFileSync/.deps/: libFileSync_la-libFileSync.Plo
libFileSync/.libs/: libFileSync.la  libFileSync.lai  libFileSync.so.0.0.0
libFileSyncFtp/: FtpFilesystem.cpp  FtpFilesystem.h  Makefile  Makefile.am  libFileSyncFtp.cpp
poco-1.6.0/: config.make
poco-1.6.0/JSON/.dep/Linux/x86_64/: Array.d  Handler.d  JSONException.d  Object.d  ParseHandler.d  Parser.d  PrintHandler.d  Query.d  Stringifier.d  Template.d  TemplateCache.d
poco-1.6.0/Net/.dep/Linux/x86_64/: AbstractHTTPRequestHandler.d  DNS.d  DatagramSocket.d  DatagramSocketImpl.d  DialogSocket.d  FTPClientSession.d  FTPStreamFactory.d  FilePartSource.d  HTMLForm.d  HTTPAuthenticationParams.d  HTTPBasicCredentials.d  HTTPBufferAllocator.d  HTTPChunkedStream.d  HTTPClientSession.d  HTTPCookie.d  HTTPCredentials.d  HTTPDigestCredentials.d  HTTPFixedLengthStream.d  HTTPHeaderStream.d  HTTPIOStream.d  HTTPMessage.d  HTTPRequest.d  HTTPRequestHandler.d  HTTPRequestHandlerFactory.d  HTTPResponse.d  HTTPServer.d  HTTPServerConnection.d  HTTPServerConnectionFactory.d  HTTPServerParams.d  HTTPServerRequest.d  HTTPServerRequestImpl.d  HTTPServerResponse.d  HTTPServerResponseImpl.d  HTTPServerSession.d  HTTPSession.d  HTTPSessionFactory.d  HTTPSessionInstantiator.d  HTTPStream.d  HTTPStreamFactory.d  HostEntry.d  (+59 more)
poco-1.6.0/Util/.dep/Linux/x86_64/: AbstractConfiguration.d  Application.d  ConfigurationMapper.d  ConfigurationView.d  FilesystemConfiguration.d  HelpFormatter.d  IniFileConfiguration.d  IntValidator.d  Option.d  (+18 more)
src/ftp/cpp/: FtpFilesystem.cpp
src/ftp/headers/: FtpFilesystem.h
src/lib/headers/: filesync.h
src/main/cpp/: main.cpp
(+356 files in other folders)
